# strands-agent-core

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
1_strands/: 1_agent.py  2_tool.py  3_mcp.py  4_multi_agent.py
2_agentcore/docker/: Dockerfile  agentcore.py
3_advanced/: frontend.py
3_advanced/docker/: Dockerfile  multiagent.py
