[project]
name = "strands-agent-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=0.1.1",
    "bedrock-agentcore-starter-toolkit>=0.1.3",
    "dotenv>=0.9.9",
    "strands-agents>=1.3.0",
    "strands-agents-tools>=0.2.3",
    "streamlit>=1.47.1",
]
